--- a/.htaccess
+++ b/.htaccess
@@ -7,7 +7,7 @@ RewriteEngine On
 # Редирект с /index.php на /
 RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /index\.php\ HTTP/
 RewriteRule ^index\.php$ / [R=301,L]
-
+RewriteRule ^anniversary$ index.php?module=pages&mode=anniversary
 # если REQUEST_FILENAME не является файлом
 RewriteCond %{REQUEST_FILENAME} !-f
 
@@ -16,3 +16,5 @@ RewriteCond %{REQUEST_FILENAME} !-d
 
 # трансформируем статические линки в динамические
 RewriteRule ^(.*)$ index.php?module=$1 [L,QSA]
+
+
